# apd

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  setup.py
apd/helpers/: README.md  SoundWav.py
apd/utils/: DataGenerator.py  math_utils.py  paths.py
notebooks/: 0.0_ConvertStarScale.ipynb  0_ConvertStarScale.ipynb  1.0_Pretrain_CNN.ipynb  1.1_Pretrained_Usage.ipynb  1.1_Pretrained_Usage_KaiOG.ipynb  1_Train_APD.ipynb
notebooks/misc/: 1_Pretrain_CNN.ipynb  Sanity check for length.ipynb
