[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "apd"
version = "0.0.1"
description = "Test environment and replication of Chen et al (2024)'s implementation of the auditory perceptual distance model."
authors = [
  { name = "Jeffrey Xing, Gentner Lab" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.9"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["apd"]
force_sort_within_sections = true
